# guideline-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-02-guideline-answering-agent.md  2026-07-02-guideline-extraction.md
docs/superpowers/specs/: 2026-07-02-guideline-answering-agent-design.md  2026-07-02-guideline-extraction-design.md
src/guideline_extractor/: cli.py  describe.py  library.py  models.py  pagemap.py  pipeline.py  render.py  webapp.py
src/guideline_extractor/agent/: loop.py  tools.py
src/page2prose/: ask.py  cli.py  describe.py  pagemap.py  pipeline.py  storage.py  util.py  webapp.py
src/page2prose/agent/: loop.py
tests/: test_ask.py  test_describe.py  test_library.py  test_loop.py  test_models.py  test_pagemap.py  test_pipeline.py  test_render.py  test_storage.py  test_tools.py  test_util.py  test_webapp.py  test_webapp_ask.py
