[project]
name = "page2prose"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pymupdf>=1.24", "openai>=1.40", "python-dotenv>=1.0", "rank-bm25>=0.2"]

[project.optional-dependencies]
ui = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9", "markdown>=3.6"]
dev = ["pytest>=8", "httpx>=0.27", "fastapi>=0.110", "python-multipart>=0.0.9", "markdown>=3.6"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
